@@ -4,6 +4,8 @@ Changes to Version 1.0-3
 correlations (reported by Bob Muenchen).
 
   o Added Barplot() and Dotplot().
+  
+  o Added readXL().
 
 Changes to Version 1.0-2
 
